UX: chat message thread indicator improvements (#22224)
- gridified the thread message indicator, alleviating some problems with positioning and overflow
participant avatars will overlap/smush on smaller size and mobile
- the excerpt went from 3 > 2 lines of wrapping on smaller size, still 1 line on large size
- dropped the copy of "last reply"
- fixed wrong line height
- moved the "x replies" over to the right near the participants, as that makes more sense
- using a bubble to indicate other participants, instead of copy

This PR introduces the @container query, which is experimental. Nothing will break when it's being viewed in a not-supported browser, but it will be less elegant.

--- a/plugins/chat/assets/javascripts/discourse/components/chat/thread/participants.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat/thread/participants.hbs
@@ -1,4 +1,7 @@
 {{#if (gt @thread.preview.participantUsers.length 1)}}
+  <div class="chat-message-thread-indicator__replies-count">
+    {{i18n "chat.thread.replies" count=@thread.preview.replyCount}}
+  </div>
   <div class="chat-thread-participants">
     <div class="chat-thread-participants__avatar-group">
       {{#each @thread.preview.participantUsers as |user|}}
@@ -8,14 +11,11 @@
           @showPresence={{false}}
         />
       {{/each}}
+      {{#if @thread.preview.otherParticipantCount}}
+        <div class="chat-thread-participants__other-count">
+          +{{@thread.preview.otherParticipantCount}}
+        </div>
+      {{/if}}
     </div>
-    {{#if @thread.preview.otherParticipantCount}}
-      <div class="chat-thread-participants__other-count">
-        {{i18n
-          "chat.thread.participants_other_count"
-          count=@thread.preview.otherParticipantCount
-        }}
-      </div>
-    {{/if}}
   </div>
 {{/if}}
