--- a/app/assets/javascripts/admin/addon/components/plugin-commit-hash.hbs
+++ b/app/assets/javascripts/admin/addon/components/plugin-commit-hash.hbs
@@ -1,6 +1,8 @@
 {{#if this.commitHash}}
   <a
-    href={{this.plugin.commit_url}}
+    href={{@plugin.commit_url}}
+    target="_blank"
+    rel="noopener noreferrer"
     class="current commit-hash"
     title={{this.commitHash}}
   >{{this.shortCommitHash}}</a>
