--- a/app/assets/stylesheets/common/components/sidebar/edit-navigation-modal-form/modal.scss
+++ b/app/assets/stylesheets/common/components/sidebar/edit-navigation-modal-form/modal.scss
@@ -2,60 +2,59 @@
   .modal-body {
     min-height: 50vh;
   }
+}
 
-  .sidebar__edit-navigation-modal-form__filter {
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 1em;
-    width: 100%;
+.sidebar__edit-navigation-modal-form__filter {
+  display: flex;
+  flex-direction: row;
+  padding: 1em 1em 0 1em;
 
-    .sidebar__edit-navigation-modal-form__filter-dropdown {
-      margin-left: 0.5em;
+  .sidebar__edit-navigation-modal-form__filter-dropdown {
+    margin-left: 0.5em;
 
-      .select-kit-header {
+    .select-kit-header {
+      background: var(--secondary);
+      color: var(--primary);
+      border: 1px solid var(--primary-low-mid);
+      font-size: var(--font-0);
+
+      &:hover,
+      &:focus {
         background: var(--secondary);
         color: var(--primary);
-        border: 1px solid var(--primary-low-mid);
-        font-size: var(--font-0);
 
-        &:hover,
-        &:focus {
-          background: var(--secondary);
+        .d-icon {
           color: var(--primary);
-
-          .d-icon {
-            color: var(--primary);
-          }
         }
       }
     }
+  }
 
-    .sidebar__edit-navigation-modal-form__filter-input {
-      display: flex;
-      flex-direction: row;
-      margin-right: auto;
-      width: 100%;
-      position: relative;
-    }
+  .sidebar__edit-navigation-modal-form__filter-input {
+    display: flex;
+    flex-direction: row;
+    margin-right: auto;
+    width: 100%;
+    position: relative;
+  }
 
-    .sidebar__edit-navigation-modal-form__filter-input-icon {
-      position: absolute;
-      left: 0.5em;
-      top: 0.65em;
-      color: var(--primary-low-mid);
-    }
+  .sidebar__edit-navigation-modal-form__filter-input-icon {
+    position: absolute;
+    left: 0.5em;
+    top: 0.65em;
+    color: var(--primary-low-mid);
+  }
 
-    .sidebar__edit-navigation-modal-form__filter-input-field {
-      border-color: var(--primary-low-mid);
-      padding-left: 1.75em;
-      width: 100%;
+  .sidebar__edit-navigation-modal-form__filter-input-field {
+    border-color: var(--primary-low-mid);
+    padding-left: 1.75em;
+    width: 100%;
 
-      &:focus {
-        border-color: var(--tertiary);
-        outline: none;
-        outline-offset: 0;
-        box-shadow: inset 0px 0px 0px 1px var(--tertiary);
-      }
+    &:focus {
+      border-color: var(--tertiary);
+      outline: none;
+      outline-offset: 0;
+      box-shadow: inset 0px 0px 0px 1px var(--tertiary);
     }
   }
 }
