--- a/app/assets/stylesheets/mobile/components/sidebar/edit-navigation-modal-form/modal.scss
+++ b/app/assets/stylesheets/mobile/components/sidebar/edit-navigation-modal-form/modal.scss
@@ -2,13 +2,14 @@
   .modal-inner-container {
     width: 35em;
   }
+}
 
-  .sidebar__edit-navigation-modal-form__filter {
-    flex-direction: column;
+.sidebar__edit-navigation-modal-form__filter {
+  flex-direction: column;
+  padding: 0.667em;
 
-    .sidebar__edit-navigation-modal-form__filter-dropdown {
-      margin-left: 0;
-      width: 100%;
-    }
+  .sidebar__edit-navigation-modal-form__filter-dropdown {
+    margin-left: 0;
+    width: 100%;
   }
 }
