--- a/app/assets/javascripts/discourse/app/components/d-modal.hbs
+++ b/app/assets/javascripts/discourse/app/components/d-modal.hbs
@@ -1,94 +1,101 @@
 {{! template-lint-disable no-pointer-down-event-binding }}
 {{! template-lint-disable no-invalid-interactive }}
 
-<div
-  class={{concat-class
-    "modal"
-    "d-modal"
-    this.modalClass
-    this.modalStyle
-    (if this.hasPanels "has-panels")
-    (if @hidden "hidden")
-  }}
-  id={{if (not-eq this.modalStyle "inline-modal") "discourse-modal"}}
-  data-keyboard="false"
-  aria-modal="true"
-  role="dialog"
-  aria-labelledby={{this.ariaLabelledby}}
-  ...attributes
-  {{did-insert this.setupListeners}}
-  {{will-destroy this.cleanupListeners}}
-  {{on "mousedown" this.handleMouseDown}}
+<ConditionalInElement
+  @element={{this.modal.containerElement}}
+  @inline={{@inline}}
 >
-  <div class="modal-outer-container">
-    <div class="modal-middle-container">
-      <div class="modal-inner-container">
-        <PluginOutlet @name="above-modal-header" @connectorTagName="div" />
-        <div class="modal-header {{this.headerClass}}">
-          {{#if this.dismissable}}
-            <DButton
-              @icon="times"
-              @action={{route-action "closeModal" "initiatedByCloseButton"}}
-              @class="btn-flat modal-close close"
-              @title="modal.close"
-            />
-          {{/if}}
+  <div
+    class={{concat-class
+      "modal"
+      "d-modal"
+      (if @inline "inline-modal" "fixed-modal")
+    }}
+    data-keyboard="false"
+    aria-modal="true"
+    role="dialog"
+    aria-labelledby={{if @title "discourse-modal-title"}}
+    ...attributes
+    {{did-insert this.setupListeners}}
+    {{will-destroy this.cleanupListeners}}
+    {{on "mouseup" this.handleMouseUp}}
+  >
+    <div class="modal-outer-container">
+      <div class="modal-middle-container">
+        <div class="modal-inner-container">
+          {{yield to="aboveHeader"}}
 
-          <div class="modal-title-wrapper">
-            {{#if this.title}}
-              <div class="title">
-                <h3 id="discourse-modal-title">{{this.title}}</h3>
-
-                {{#if this.subtitle}}
-                  <p class="subtitle">{{this.subtitle}}</p>
-                {{/if}}
-              </div>
-            {{/if}}
-
-            <span id="modal-header-after-title"></span>
-          </div>
-
-          {{#if this.panels}}
-            <ul class="modal-tabs">
-              {{#each this.panels as |panel|}}
-                <ModalTab
-                  @panel={{panel}}
-                  @panelsLength={{this.panels.length}}
-                  @selectedPanel={{@selectedPanel}}
-                  @onSelectPanel={{@onSelectPanel}}
-                />
-              {{/each}}
-            </ul>
-          {{/if}}
-        </div>
-
-        <div
-          id="modal-alert"
-          role="alert"
-          class={{if
-            this.flash
-            (concat-class
-              "alert" (concat "alert-" (or this.flash.messageClass "success"))
+          {{#if
+            (or
+              this.dismissable
+              @title
+              (has-block "headerBelowTitle")
+              (has-block "headerAboveTitle")
             )
           }}
-        >
-          {{~this.flash.text~}}
-        </div>
+            <div class={{concat-class "modal-header" @headerClass}}>
+              {{#if this.dismissable}}
+                <DButton
+                  @icon="times"
+                  @action={{this.handleCloseButton}}
+                  @class="btn-flat modal-close close"
+                  @title="modal.close"
+                />
+              {{/if}}
 
-        {{yield}}
+              {{yield to="headerAboveTitle"}}
 
-        {{#each this.errors as |error|}}
-          <div class="alert alert-error">
-            <button
-              type="button"
-              class="close"
-              data-dismiss="alert"
-              aria-label={{i18n "modal.dismiss_error"}}
-            >×</button>
-            {{error}}
+              <div class="modal-title-wrapper">
+                {{#if @title}}
+                  <div class="title">
+                    <h3 id="discourse-modal-title">{{@title}}</h3>
+
+                    {{#if @subtitle}}
+                      <p class="subtitle">{{@subtitle}}</p>
+                    {{/if}}
+                  </div>
+                {{/if}}
+
+                {{yield to="headerBelowTitle"}}
+              </div>
+            </div>
+          {{/if}}
+
+          {{yield to="belowHeader"}}
+
+          {{#if @flash}}
+            <div
+              id="modal-alert"
+              role="alert"
+              class={{concat-class
+                "alert"
+                (concat "alert-" (or @flashType "success"))
+              }}
+            >
+              {{~@flash~}}
+            </div>
+          {{/if}}
+
+          <div class="modal-body" tabindex="-1">
+            {{#if (has-block "body")}}
+              {{yield to="body"}}
+            {{else}}
+              {{yield}}
+            {{/if}}
           </div>
-        {{/each}}
+
+          {{#if (has-block "footer")}}
+            <div class="modal-footer">
+              {{yield to="footer"}}
+            </div>
+          {{/if}}
+
+          {{yield to="belowFooter"}}
+        </div>
       </div>
     </div>
   </div>
-</div>
+  {{#unless @inline}}
+    <div class="modal-backdrop"></div>
+  {{/unless}}
+</ConditionalInElement>
