FIX: Minor Twitter onebox improvements (#22387)

--- a/app/assets/stylesheets/common/base/onebox.scss
+++ b/app/assets/stylesheets/common/base/onebox.scss
@@ -679,6 +679,11 @@ aside.onebox.twitterstatus .onebox-body {
       margin-right: 0.25em;
     }
   }
+
+  .is-reply {
+    color: var(--primary-medium);
+    margin-right: 0.25em;
+  }
 }
 
 // Onebox - Imgur/Flickr - Album
