DEV: Switch edit nav menu tags/categories modal to component (#22401)
Why this change?

A new component based API for modals was introduced in
b3a23bd9d6abdff2d87d4f32866a27cb6770f499. This commit moves the edit
navigation menu tags and categories modal to the new API.

--- a/app/assets/javascripts/discourse/app/components/sidebar/edit-navigation-menu/categories-modal.hbs
+++ b/app/assets/javascripts/discourse/app/components/sidebar/edit-navigation-menu/categories-modal.hbs
@@ -1,4 +1,4 @@
-<Sidebar::EditNavigationModalForm::Modal
+<Sidebar::EditNavigationMenu::Modal
   @title="sidebar.categories_form_modal.title"
   @disableSaveButton={{this.saving}}
   @save={{this.save}}
@@ -15,6 +15,7 @@
   @resetFilter={{this.resetFilter}}
   @filterSelected={{this.filterSelected}}
   @filterUnselected={{this.filterUnselected}}
+  @closeModal={{@closeModal}}
 >
   <form class="sidebar-categories-form">
     {{#if (gt this.filteredCategoriesGroupings.length 0)}}
@@ -68,4 +69,4 @@
       </div>
     {{/if}}
   </form>
-</Sidebar::EditNavigationModalForm::Modal>
+</Sidebar::EditNavigationMenu::Modal>
