--- a/app/assets/stylesheets/common/base/modal.scss
+++ b/app/assets/stylesheets/common/base/modal.scss
@@ -133,10 +133,10 @@
     }
   }
 
-  &:not(.history-modal) {
+  &:not(.history-modal):not(.sidebar__edit-navigation-menu__modal) {
     .modal-body:not(.reorder-categories):not(.poll-ui-builder):not(
         .poll-breakdown
-      ):not(.sidebar__edit-navigation-modal-form__body) {
+      ) {
       max-height: 80vh !important;
       @media screen and (max-height: 500px) {
         max-height: 65vh !important;
