FEATURE: allow user to override watched_precedence_over_muted setting (#22340)
Recently, site setting watched_precedence_over_muted was introduced - https://github.com/discourse/discourse/pull/22252

In this PR, we are allowing users to override it. The option is only displayed when the user has watched categories and muted tags, or vice versa.

--- a/app/assets/javascripts/discourse/app/templates/preferences/tracking.hbs
+++ b/app/assets/javascripts/discourse/app/templates/preferences/tracking.hbs
@@ -72,6 +72,15 @@
     />
   </div>
 </div>
+{{#if this.showMutePrecedenceSetting}}
+  <div class="control-group user-preferences__watched-precedence-over-muted">
+    <PreferenceCheckbox
+      data-setting-name="watched-precedence-over-muted"
+      @labelKey="user.watched_precedence_over_muted"
+      @checked={{this.model.user_option.watched_precedence_over_muted}}
+    />
+  </div>
+{{/if}}
 
 {{#if this.canSave}}
   <SaveControls
