DEV: Fix or remove flaky chat specs (#22406)
* DEV: Fix flaky thread nav spec

When we transitioned from the chat thread panel under some conditions
the request for the thread would come back and realise the component
was destroyed, which was trying to do a transition to the channel
itself.

Now we check for the previous route here too and transition to the
correct route.

* DEV: Fix chat transcript spec relying on animation

The on-animation-end modifier is not reliable in system specs
because it fires instantly (we have disabled capybara animations)
so the showCopySuccess boolean can be mutated back to false straight
away.

Better to have a separate boolean tracked with a data-attr that we
can reliably inspect in the system spec.

--- a/plugins/chat/assets/javascripts/discourse/components/chat/selection-manager.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat/selection-manager.hbs
@@ -1,4 +1,7 @@
-<div class="chat-selection-management">
+<div
+  class="chat-selection-management"
+  data-last-copy-successful={{this.lastCopySuccessful}}
+>
   <div class="chat-selection-management__buttons">
     <DButton
       @id="chat-quote-btn"
