UX: Thread indicator small fixes (#22389)
* UX: make timestamp font size smaller

* UX: participants use copy instead of avatar

* FIX: Move thread participant count into i18n

---------

Co-authored-by: Martin Brennan <martin@discourse.org>

--- a/plugins/chat/assets/javascripts/discourse/components/chat/thread/participants.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat/thread/participants.hbs
@@ -11,11 +11,14 @@
           @showPresence={{false}}
         />
       {{/each}}
-      {{#if @thread.preview.otherParticipantCount}}
-        <div class="chat-thread-participants__other-count">
-          +{{@thread.preview.otherParticipantCount}}
-        </div>
-      {{/if}}
     </div>
+    {{#if @thread.preview.otherParticipantCount}}
+      <div class="chat-thread-participants__other-count">
+        {{i18n
+          "chat.thread.participants_other_count"
+          count=@thread.preview.otherParticipantCount
+        }}
+      </div>
+    {{/if}}
   </div>
 {{/if}}
