DEV: Add `@bodyClass` argument to `<DModal>` component (#22410)

--- a/app/assets/javascripts/discourse/app/components/d-modal.hbs
+++ b/app/assets/javascripts/discourse/app/components/d-modal.hbs
@@ -76,7 +76,7 @@
             </div>
           {{/if}}
 
-          <div class="modal-body" tabindex="-1">
+          <div class={{concat-class "modal-body" @bodyClass}} tabindex="-1">
             {{#if (has-block "body")}}
               {{yield to="body"}}
             {{else}}
