--- a/app/assets/javascripts/discourse/app/components/modal-container.hbs
+++ b/app/assets/javascripts/discourse/app/components/modal-container.hbs
@@ -1,11 +1,14 @@
 <div class="modal-container" {{did-insert this.modal.setContainerElement}}>
 </div>
 
-{{#if this.modal.modalBodyComponent}}
-  <this.modal.modalBodyComponent
-    @model={{this.modal.opts.model}}
-    @closeModal={{this.closeModal}}
-  />
+{{#if this.modal.activeModal}}
+  {{#each (array this.modal.activeModal) as |activeModal|}}
+    {{! #each ensures that the activeModal component/model are updated atomically }}
+    <activeModal.component
+      @model={{activeModal.opts.model}}
+      @closeModal={{this.closeModal}}
+    />
+  {{/each}}
 {{/if}}
 
 {{! Legacy modals depend on this wrapper being in the DOM at all times. Eventually this will be dropped.
