DEV: Error if invalid `@flashType` passed to modal (#22414)

--- a/app/assets/javascripts/discourse/app/components/d-modal.hbs
+++ b/app/assets/javascripts/discourse/app/components/d-modal.hbs
@@ -63,6 +63,7 @@
 
           {{yield to="belowHeader"}}
 
+          {{this.validateFlashType @flashType}}
           {{#if @flash}}
             <div
               id="modal-alert"
