DEV: Update default modal alert class (#22416)
This PR changes the default to not append any classes (when `@flashType` isn't present) and instead leans on the `alert` class for styling the alert which is a 1 to 1 match of the `alert-error` class.

https://github.com/discourse/discourse/blob/8f21d2cf4031f2b7b8a4a759507d34c0ff11800e/app/assets/stylesheets/common/base/alert.scss#L1-L4

https://github.com/discourse/discourse/blob/8f21d2cf4031f2b7b8a4a759507d34c0ff11800e/app/assets/stylesheets/common/base/alert.scss#L22-L24

In essence this changes the default modal alert styling from `success` to `error` if not overridden by `@flashType`

--- a/app/assets/javascripts/discourse/app/components/d-modal.hbs
+++ b/app/assets/javascripts/discourse/app/components/d-modal.hbs
@@ -70,7 +70,7 @@
               role="alert"
               class={{concat-class
                 "alert"
-                (concat "alert-" (or @flashType "success"))
+                (if @flashType (concat "alert-" @flashType))
               }}
             >
               {{~@flash~}}
